[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schemer"
version = "0.1.0"
description = "Generate short database schemas for the task of sql generation via llms."
readme = "README.rst"
authors = [
  {name = "Pavel Varbanov", email = "pavel170@ya"}
]
maintainers = [
  {name = "Pavel Varbanov", email = "pavel170@ya"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/pavel170/schemer/issues"
changelog = "https://github.com/pavel170/schemer/blob/master/changelog.md"
homepage = "https://github.com/pavel170/schemer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

